adding duplicates test

--- a/project.properties
+++ b/project.properties
@@ -12,5 +12,5 @@
 
 # Project target.
 target=android-19
-android.library=true
+android.library=false
 android.library.reference.1=../mixpanel-android-latest/src/main
