--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,10 +3,10 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="5" />
-    
     <uses-permission android:name="android.permission.INTERNET"/>
 
+    <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="19"/>
+    
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
