--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,10 +7,6 @@
 
     <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="19"/>
     
-    <application
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-    </application>
+    <application/>
 
 </manifest>
