removing android manifest.xml

--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,10 @@ android {
     dependencies {
         compile fileTree(dir: 'libs/', include: '*.jar')
     }
+
+  packagingOptions {
+    exclude 'AndroidManifest.xml'
+  }
 }
 
 //
