--- a/tests/AndroidManifest.xml
+++ b/tests/AndroidManifest.xml
@@ -8,7 +8,7 @@
     
     <instrumentation
         android:name="android.test.InstrumentationTestRunner"
-        android:targetPackage="com.segment.android" />
+        android:targetPackage="com.segment.android.test" />
 
     <application
         android:icon="@drawable/ic_launcher"
