--- a/project.properties
+++ b/project.properties
@@ -13,4 +13,4 @@
 # Project target.
 target=android-19
 android.library=true
-android.library.reference.1=../mixpanel-android-latest/src/main
+android.library.reference.1=../mixpanel-android-4.2.1/src/main
