--- a/analytics/build.gradle
+++ b/analytics/build.gradle
@@ -34,6 +34,7 @@ android.libraryVariants.all { variant ->
   checkstyle.classpath = project.fileTree(variant.javaCompile.destinationDir)
   checkstyle.exclude('**/BuildConfig.java')
   checkstyle.exclude('**/R.java')
+  checkstyle.exclude('**/com/localytics/**')
   project.tasks.getByName('check').dependsOn checkstyle
 
   // Only attach a jar for non-debug build types.
