--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,23 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+GROUP=com.segment
+VERSION_NAME=1.0.0-SNAPSHOT
+
+POM_ARTIFACT_ID=analytics
+POM_NAME=Segment.io for Android
+POM_PACKAGING=aar
+POM_DESCRIPTION=The hassle-free way to add analytics to your Android app.
+
+POM_URL=http://github.com/segmentio/analytics-android
+POM_SCM_URL=http://github.com/segmentio/analytics-android
+POM_SCM_CONNECTION=scm:git:git://github.com/segmentio/analytics-android.git
+POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/segmentio/analytics-android.git
+
+POM_LICENCE_NAME=The MIT License (MIT)
+POM_LICENCE_URL=http://opensource.org/licenses/MIT
+POM_LICENCE_DIST=repo
+
+POM_DEVELOPER_ID=segmentio
+POM_DEVELOPER_NAME=Segment.io, Inc.
