--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+// Top-level build file; configuration options common to all sub-projects/modules.
 
 buildscript {
   repositories {
@@ -6,9 +6,6 @@ buildscript {
   }
   dependencies {
     classpath 'com.android.tools.build:gradle:0.11.+'
-
-    // NOTE: Do not place your application dependencies here; they belong
-    // in the individual module build.gradle files
   }
 }
 
