--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,14 @@
 // Top-level build file; configuration options common to all sub-projects/modules.
+apply plugin: 'versions'
 
 buildscript {
   repositories {
     mavenCentral()
+    maven { url "https://github.com/ben-manes/gradle-versions-plugin/raw/mvnrepo" }
   }
   dependencies {
     classpath 'com.android.tools.build:gradle:0.11.+'
+    classpath 'com.github.ben-manes:gradle-versions-plugin:0.5-beta-5'
   }
 }
 
