--- a/gradle.properties
+++ b/gradle.properties
@@ -17,7 +17,7 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-GROUP=com.segment
+GROUP=com.segment.android
 VERSION_NAME=1.0.0-SNAPSHOT
 
 POM_ARTIFACT_ID=analytics
