Show exclusion sample

--- a/sample-app/build.gradle
+++ b/sample-app/build.gradle
@@ -51,4 +51,7 @@ android.applicationVariants.all { variant ->
 
 dependencies {
   compile project(':analytics')
+  // compile (project(':analytics')) {
+  //   exclude module: 'mixpanel-android'
+  // }
 }
