--- a/gradle.properties
+++ b/gradle.properties
@@ -18,7 +18,7 @@
 # org.gradle.parallel=true
 
 GROUP=io.segment.android
-VERSION_NAME=1.2.0-SNAPSHOT
+VERSION_NAME=1.2.1
 
 POM_ARTIFACT_ID=analytics
 POM_NAME=Segment.io for Android
