--- a/analytics/build.gradle
+++ b/analytics/build.gradle
@@ -39,12 +39,12 @@ android.libraryVariants.all { variant ->
   project.tasks.getByName('check').dependsOn checkstyle
 
   // Only attach a jar for non-debug build types.
-  if (!name.equals(com.android.builder.core.BuilderConstants)) {
+  if (!name.equals(com.android.builder.core.BuilderConstants.DEBUG)) {
     def task = project.tasks.create "jar${name.capitalize()}", Jar
     task.dependsOn variant.javaCompile
-    //Include Java classes
+    // Include Java classes
     task.from variant.javaCompile.destinationDir
-    //Include dependent jars with some exceptions
+    // Include dependent jars with some exceptions
     task.from configurations.compile.findAll {
       it.getName() != 'android.jar'
     }.collect {
@@ -60,6 +60,5 @@ dependencies {
   compile 'com.bugsnag:bugsnag-android:2.2.0'
   compile 'ly.count:sdk-android:13.11'
   compile 'com.mixpanel.android:mixpanel-android:4.2.1@aar'
-  compile 'com.quantcast.android.measurement:QuantcastAndroidSdk:1.2.1'
   androidTestCompile 'junit:junit:4.11'
 }
