--- a/analytics/build.gradle
+++ b/analytics/build.gradle
@@ -62,4 +62,5 @@ dependencies {
   compile 'ly.count:sdk-android:13.11'
   compile 'com.mixpanel.android:mixpanel-android:4.2.1@aar'
   androidTestCompile 'junit:junit:4.11'
+  androidTestCompile 'com.squareup:fest-android:1.0.8'
 }
