Move Localytics into its own module

--- a/analytics-android-sample-app/build.gradle
+++ b/analytics-android-sample-app/build.gradle
@@ -52,4 +52,5 @@ android.applicationVariants.all { variant ->
 
 dependencies {
   compile project(':analytics-android')
+  compile project(':analytics-android-localytics')
 }
