--- a/analytics-android-localytics/src/main/AndroidManifest.xml
+++ b/analytics-android-localytics/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ The MIT License (MIT)
   ~
@@ -23,10 +23,6 @@
   ~ SOFTWARE.
   -->
 
-<resources>
-  <!--Your Segment.io f2prateek/android-sample-app write key-->
-  <string name="analytics_write_key">l8v1ga655b</string>
-
-  <!--Whether to print additional debug information as you develop.-->
-  <string name="analytics_debug">true</string>
-</resources>
+<manifest package="com.localytics.android">
+  <application/>
+</manifest>
