Seperate Amplitude Integration

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,4 @@
 include ':analytics-android'
+include ':analytics-android-amplitude'
 include ':analytics-android-localytics'
 include ':analytics-android-sample-app'
