--- a/settings.gradle
+++ b/settings.gradle
@@ -2,5 +2,6 @@ include ':analytics-android'
 include ':analytics-android-amplitude'
 include ':analytics-android-bugsnag'
 include ':analytics-android-countly'
+include ':analytics-android-crittercism'
 include ':analytics-android-localytics'
 include ':analytics-android-sample-app'
