--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,8 @@
 # Project-wide Gradle settings.
 
 GROUP=io.segment.analytics
+
+VERSION_CODE=121
 VERSION_NAME=1.2.1-SNAPSHOT
 
 POM_NAME=Segment.io for Android
