--- a/analytics-android/build.gradle
+++ b/analytics-android/build.gradle
@@ -1,15 +1,22 @@
 apply plugin: 'android-library'
-apply plugin: 'checkstyle'
-apply from: '../release.gradle'
+
+dependencies {
+  compile fileTree(dir: 'libs', include: ['*.jar'])
+  compile 'ly.count:sdk-android:13.11'
+  compile 'com.mixpanel.android:mixpanel-android:4.2.1@aar'
+  androidTestCompile 'junit:junit:4.11'
+  androidTestCompile 'com.squareup:fest-android:1.0.8'
+}
 
 android {
-  compileSdkVersion 19
-  buildToolsVersion '19.1.0'
+  compileSdkVersion rootProject.ext.compileSdkVersion
+  buildToolsVersion rootProject.ext.buildToolsVersion
 
   defaultConfig {
-    minSdkVersion 10
-    targetSdkVersion 19
-    versionName VERSION_NAME
+    minSdkVersion rootProject.ext.minSdkVersion
+    targetSdkVersion rootProject.ext.targetSdkVersion
+    versionCode rootProject.ext.versionCode
+    versionName rootProject.ext.versionName
   }
 
   lintOptions {
@@ -21,43 +28,5 @@ android {
   }
 }
 
-checkstyle {
-  configFile project.file('../checkstyle.xml')
-  showViolations true
-}
-
-android.libraryVariants.all { variant ->
-  def name = variant.buildType.name
-
-  // Checkstyle
-  def checkstyle = project.tasks.create "checkstyle${name.capitalize()}", Checkstyle
-  checkstyle.dependsOn variant.javaCompile
-  checkstyle.source variant.javaCompile.source
-  checkstyle.classpath = project.fileTree(variant.javaCompile.destinationDir)
-  checkstyle.exclude('**/BuildConfig.java')
-  checkstyle.exclude('**/R.java')
-  project.tasks.getByName('check').dependsOn checkstyle
-
-  // Only attach a jar for non-debug build types.
-  if (!name.equals(com.android.builder.core.BuilderConstants.DEBUG)) {
-    def task = project.tasks.create "jar${name.capitalize()}", Jar
-    task.dependsOn variant.javaCompile
-    // Include Java classes
-    task.from variant.javaCompile.destinationDir
-    // Include dependent jars with some exceptions
-    task.from configurations.compile.findAll {
-      it.getName() != 'android.jar'
-    }.collect {
-      it.isDirectory() ? it : zipTree(it)
-    }
-    artifacts.add('archives', task);
-  }
-}
-
-dependencies {
-  compile fileTree(dir: 'libs', include: ['*.jar'])
-  compile 'ly.count:sdk-android:13.11'
-  compile 'com.mixpanel.android:mixpanel-android:4.2.1@aar'
-  androidTestCompile 'junit:junit:4.11'
-  androidTestCompile 'com.squareup:fest-android:1.0.8'
-}
+apply from: rootProject.file('gradle/checkstyle.gradle')
+apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
