--- a/analytics-android-localytics/build.gradle
+++ b/analytics-android-localytics/build.gradle
@@ -26,3 +26,4 @@ android {
 
 // apply from: rootProject.file('gradle/checkstyle.gradle')
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
+apply from: rootProject.file('gradle/package-jar.gradle')
