--- a/settings.gradle
+++ b/settings.gradle
@@ -4,4 +4,5 @@ include ':analytics-android-bugsnag'
 include ':analytics-android-countly'
 include ':analytics-android-crittercism'
 include ':analytics-android-localytics'
+include ':analytics-android-flurry'
 include ':analytics-android-sample-app'
