Move Quantcast Integration into it's own module

--- a/settings.gradle
+++ b/settings.gradle
@@ -6,4 +6,5 @@ include ':analytics-android-crittercism'
 include ':analytics-android-flurry'
 include ':analytics-android-mixpanel'
 include ':analytics-android-localytics'
+include ':analytics-android-quantcast'
 include ':analytics-android-sample-app'
