--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,7 @@ include ':analytics-android-bugsnag'
 include ':analytics-android-countly'
 include ':analytics-android-crittercism'
 include ':analytics-android-flurry'
+include ':analytics-android-google-analytics'
 include ':analytics-android-localytics'
 include ':analytics-android-mixpanel'
 include ':analytics-android-tapstream'
