--- a/.travis.yml
+++ b/.travis.yml
@@ -10,18 +10,28 @@ branches:
   except:
     - gh-pages
 
-android:
-  components:
-    - build-tools-19.1.0
-    - android-19
-    - sysimg-19
-  licenses:
-    - android-sdk-license-5be876d5
-    - '.*intel.+'
+#android:
+#  components:
+#    - build-tools-19.1.0
+#  licenses:
+#    - android-sdk-license-5be876d5
 
 before_install:
+  # workaround for https://github.com/travis-ci/travis-ci/issues/2279
+  - 'sudo mv /usr/local/android-sdk/tools/android-* /usr/local/bin'
+  # Accept all licenses (workaround for travis-ci/travis-ci#2466)
+  # Upgrade 'platform-tools' before 'tools' (workaround for https://github.com/travis-ci/travis-ci/issues/2470)
+  # Run dinstinct 'android update sdk' commands
+  - "android-update-sdk --components='platform-tools,tools' --accept-licenses='.+'"
+  - "android-update-sdk --components='build-tools-19.1.0' --accept-licenses='.+'"
+  - "android-update-sdk --components='android-19' --accept-licenses='.+'"
+  - "android-update-sdk --components='sys-img-armeabi-v7a-android-19' --accept-licenses='.+'"
+  - "android-update-sdk --components='extra-android-m2repository,extra-google-m2repository' --accept-licenses='.+'"
+
   - curl https://raw.githubusercontent.com/embarkmobile/android-sdk-installer/master/wait_for_emulator >> wait.sh
   - chmod u+x wait.sh
+
+  - android list sdk --no-ui --all --extended
 
   # Create and start emulator  
   - echo no | android create avd --force -n test -t android-19 --abi armeabi-v7a
