--- a/analytics-android/src/main/AndroidManifest.xml
+++ b/analytics-android/src/main/AndroidManifest.xml
@@ -23,6 +23,12 @@
   ~ SOFTWARE.
   -->
 
-<manifest package="com.segment.android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.segment.android">
+
+  <!-- Required for internet. -->
+  <uses-permission android:name="android.permission.INTERNET"/>
+  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
   <application/>
 </manifest>
