--- a/analytics-android-bugsnag/build.gradle
+++ b/analytics-android-bugsnag/build.gradle
@@ -27,4 +27,4 @@ android {
 
 apply from: rootProject.file('gradle/checkstyle.gradle')
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
-apply from: rootProject.file('gradle/package-jar.gradle')
+apply from: rootProject.file('gradle/attach-jar.gradle')
