--- a/analytics-android-amplitude/build.gradle
+++ b/analytics-android-amplitude/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'android-library'
+apply plugin: 'com.android.library'
 
 dependencies {
   provided project(':analytics-android-core')
