Let modules have a compile scoped dependency on core - no differences for Gradle/Maven users, will have to see how this affects jar users.

--- a/analytics-android-sample-app/build.gradle
+++ b/analytics-android-sample-app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 dependencies {
-  provided project(':analytics-android-core')
+  compile project(':analytics-android-core')
   compile project(':analytics-android-amplitude')
   compile project(':analytics-android-mixpanel')
   compile project(':analytics-android-flurry')
