--- a/analytics-android-bugsnag/build.gradle
+++ b/analytics-android-bugsnag/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 
 dependencies {
-  provided project(':analytics-android-core')
+  compile project(':analytics-android-core')
   compile 'com.bugsnag:bugsnag-android:2.2.0'
 }
 
