--- a/analytics-android-flurry/build.gradle
+++ b/analytics-android-flurry/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 
 dependencies {
-  provided project(':analytics-android-core')
+  compile project(':analytics-android-core')
   compile files('libs/FlurryAnalytics-4.0.0.jar')
 }
 
