--- a/analytics-android-google-analytics/build.gradle
+++ b/analytics-android-google-analytics/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 
 dependencies {
-  provided project(':analytics-android-core')
+  compile project(':analytics-android-core')
   compile 'com.google.android.gms:play-services:5.0.77'
 }
 
