--- a/analytics-android-localytics/build.gradle
+++ b/analytics-android-localytics/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 
 dependencies {
-  provided project(':analytics-android-core')
+  compile project(':analytics-android-core')
 }
 
 android {
