--- a/analytics-android-mixpanel/build.gradle
+++ b/analytics-android-mixpanel/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 
 dependencies {
-  provided project(':analytics-android-core')
+  compile project(':analytics-android-core')
   compile 'com.mixpanel.android:mixpanel-android:4.2.1@aar'
 }
 
