--- a/analytics-android-amplitude/build.gradle
+++ b/analytics-android-amplitude/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 
 dependencies {
-  compile project(':analytics-android-core')
+  provided project(':analytics-android-core')
   compile 'com.amplitude:android-sdk:1.4'
 }
 
