--- a/analytics-android-countly/build.gradle
+++ b/analytics-android-countly/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 
 dependencies {
-  compile project(':analytics-android-core')
+  provided project(':analytics-android-core')
   compile 'ly.count:sdk-android:13.11'
 }
 
