--- a/analytics-android-crittercism/build.gradle
+++ b/analytics-android-crittercism/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 
 dependencies {
-  compile project(':analytics-android-core')
+  provided project(':analytics-android-core')
   compile files('libs/crittercism_v4_5_1_sdkonly.jar')
 }
 
