--- a/analytics-android-tapstream/build.gradle
+++ b/analytics-android-tapstream/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 
 dependencies {
-  compile project(':analytics-android-core')
+  provided project(':analytics-android-core')
   compile files('libs/Tapstream-2.7.1.jar')
 }
 
