Add a master artifact

--- a/settings.gradle
+++ b/settings.gradle
@@ -9,4 +9,5 @@ include ':analytics-android-localytics'
 include ':analytics-android-mixpanel'
 include ':analytics-android-tapstream'
 include ':analytics-android-quantcast'
+include ':analytics-android-all'
 include ':analytics-android-sample-app'
