--- a/analytics-android-sample-app/build.gradle
+++ b/analytics-android-sample-app/build.gradle
@@ -1,10 +1,7 @@
 apply plugin: 'com.android.application'
 
 dependencies {
-  compile project(':analytics-android-core')
-  compile project(':analytics-android-amplitude')
-  compile project(':analytics-android-mixpanel')
-  compile project(':analytics-android-flurry')
+  compile project(':analytics-android-all')
 }
 
 android {
