--- a/analytics-android-google-analytics/build.gradle
+++ b/analytics-android-google-analytics/build.gradle
@@ -26,5 +26,5 @@ android {
 }
 
 apply from: rootProject.file('gradle/checkstyle.gradle')
+apply from: rootProject.file('gradle/attach-lean-jar.gradle')
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
-apply from: rootProject.file('gradle/attach-jar.gradle')
