--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,15 @@
 // Top-level build file; configuration options common to all sub-projects/modules.
 
-buildscript {
-  repositories {
-    mavenCentral()
+subprojects {
+  buildscript {
+    repositories {
+      mavenCentral()
+    }
+    dependencies {
+      classpath 'com.android.tools.build:gradle:0.12.+'
+    }
   }
-  dependencies {
-    classpath 'com.android.tools.build:gradle:0.12.+'
-  }
-}
 
-allprojects {
   repositories {
     mavenCentral()
   }
