--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@
 
 GROUP=io.segment.analytics.android
 
-VERSION_CODE=121
-VERSION_NAME=1.2.1-SNAPSHOT
+VERSION_CODE=130
+VERSION_NAME=1.3.0
 
 POM_NAME=Segment.io for Android
 POM_DESCRIPTION=The hassle-free way to add analytics to your Android app.
