--- a/sample-app/build.gradle
+++ b/sample-app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 
 dependencies {
   compile project(':all')
+  /**repositories { maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }}compile('io.segment.analytics.android:all:1.3.1-SNAPSHOT@aar') {transitive = true}**/
 }
 
 android {
