--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 // Top-level build file; configuration options common to all sub-projects/modules.
+apply plugin: 'idea'
 
 subprojects {
   buildscript {
