--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@
 
 GROUP=io.segment.analytics.android
 
-VERSION_CODE=131
-VERSION_NAME=1.3.1
+VERSION_CODE=132
+VERSION_NAME=1.3.2-SNAPSHOT
 
 POM_NAME=Segment.io for Android
 POM_DESCRIPTION=The hassle-free way to add analytics to your Android app.
