--- a/sample-app/build.gradle
+++ b/sample-app/build.gradle
@@ -1,11 +1,7 @@
 apply plugin: 'com.android.application'
 
 dependencies {
-  compile 'io.segment.analytics.android:core:1.3.1@aar'
-  compile('io.segment.analytics.android:mixpanel:1.3.1@aar') {
-    transitive = true
-  }
-  /**repositories { maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }}compile('io.segment.analytics.android:all:1.3.1-SNAPSHOT@aar') {transitive = true}**/
+  compile project(':core')
 }
 
 android {
