prepare for release

--- a/localytics/build.gradle
+++ b/localytics/build.gradle
@@ -20,4 +20,5 @@ android {
   }
 }
 
+apply from: rootProject.file('gradle/attach-lean-jar.gradle')
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
