--- a/localytics/build.gradle
+++ b/localytics/build.gradle
@@ -16,6 +16,10 @@ android {
     abortOnError false
   }
 
+  dexOptions {
+    preDexLibraries = rootProject.ext.preDexLibraries
+  }
+
   packagingOptions {
     exclude 'LICENSE.txt'
   }
