--- a/core/build.gradle
+++ b/core/build.gradle
@@ -35,6 +35,10 @@ android {
     abortOnError false
   }
 
+  dexOptions {
+    preDexLibraries = rootProject.ext.preDexLibraries
+  }
+
   packagingOptions {
     exclude 'LICENSE.txt'
   }
