--- a/sample-app/build.gradle
+++ b/sample-app/build.gradle
@@ -23,6 +23,10 @@ android {
   lintOptions {
     abortOnError false
   }
+  
+  dexOptions {
+    preDexLibraries = rootProject.ext.preDexLibraries
+  }
 
   buildTypes {
     release {
