Skip pre-dex for Travis

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -33,6 +33,10 @@ android {
     abortOnError false
   }
 
+  dexOptions {
+    preDexLibraries = rootProject.ext.preDexLibraries
+  }
+
   packagingOptions {
     exclude 'LICENSE.txt'
   }
