--- a/sample-app/build.gradle
+++ b/sample-app/build.gradle
@@ -5,7 +5,7 @@ dependencies {
   // compile('io.segment.analytics.android:all:1.3.11-SNAPSHOT@aar') {
   //   transitive = true
   // }
-  compile project(':core')
+  compile project(':all')
 }
 
 android {
