--- a/core/build.gradle
+++ b/core/build.gradle
@@ -14,6 +14,8 @@ dependencies {
 
   androidTestCompile 'junit:junit:4.11'
   androidTestCompile 'com.squareup:fest-android:1.0.8'
+  androidTestCompile 'org.mockito:mockito-core:1.9.5'
+  androidTestCompile 'com.google.dexmaker:dexmaker-mockito:1.1'
 }
 
 android {
