--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@
 
 GROUP=io.segment.analytics.android
 
-VERSION_CODE=143
-VERSION_NAME=1.4.3
+VERSION_CODE=144
+VERSION_NAME=1.4.4-SNAPSHOT
 
 POM_NAME=Segment.io for Android
 POM_DESCRIPTION=The hassle-free way to add analytics to your Android app.
