--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 GROUP=io.segment.analytics.android
 
 VERSION_CODE=144
-VERSION_NAME=1.4.4-SNAPSHOT
+VERSION_NAME=1.4.4
 
 POM_NAME=Segment.io for Android
 POM_DESCRIPTION=The hassle-free way to add analytics to your Android app.
