Change package to com.segment.analytics; Rename Segment to Analytics to keep parity with other SDKs

--- a/all/src/main/AndroidManifest.xml
+++ b/all/src/main/AndroidManifest.xml
@@ -23,6 +23,6 @@
   ~ SOFTWARE.
   -->
 
-<manifest package="com.segment.android.all">
+<manifest package="com.segment.analytics.all">
   <application/>
 </manifest>
