--- a/core/src/main/AndroidManifest.xml
+++ b/core/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.segment.android">
+    package="com.segment.analytics">
 
   <!-- Required for internet. -->
   <uses-permission android:name="android.permission.INTERNET"/>
