--- a/sample-app/src/main/AndroidManifest.xml
+++ b/sample-app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.segment.android.sample">
+    package="com.segment.analytics.sample">
 
   <!-- Required for internet. -->
   <uses-permission android:name="android.permission.INTERNET"/>
@@ -46,7 +46,7 @@
       android:label="@string/app_name"
       android:theme="@style/AppTheme">
     <activity
-        android:name="com.segment.android.sample.MainActivity"
+        android:name=".MainActivity"
         android:label="@string/app_name">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
