Use `com` prefix for maven namespace

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # Project-wide Gradle settings.
 
-GROUP=io.segment.analytics.android
+GROUP=com.segment.analytics.android
 
 VERSION_CODE=2001
 VERSION_NAME=2.0.0-SNAPSHOT
