--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ ext {
   versionName = VERSION_NAME
 
   minSdkVersion = 10
+  minSdkVersionWear = 20
   targetSdkVersion = 20
   compileSdkVersion = 20
   buildToolsVersion = '20.0.0'
@@ -46,5 +47,7 @@ ext.libraries = [
     localytics: project(':localytics'),
     mixpanel: 'com.mixpanel.android:mixpanel-android:4.2.1@aar',
     quantcast: files('libs/QuantcastAndroidSdk.jar'),
-    tapstream: files('libs/Tapstream-2.7.1.jar')
+    tapstream: files('libs/Tapstream-2.7.1.jar'),
+    supportWearable: 'com.google.android.support:wearable:+',
+    playWearable: 'com.google.android.gms:play-services-wearable:+'
 ]
