--- a/sample-app/src/main/AndroidManifest.xml
+++ b/sample-app/src/main/AndroidManifest.xml
@@ -45,6 +45,7 @@
       android:icon="@drawable/ic_launcher"
       android:label="@string/app_name"
       android:theme="@style/AppTheme">
+
     <activity
         android:name=".MainActivity"
         android:label="@string/app_name">
@@ -54,6 +55,17 @@
         <category android:name="android.intent.category.DEFAULT"/>
       </intent-filter>
     </activity>
+
+    <service
+        android:name="com.segment.analytics.wear.PhoneAnalyticsListenerService">
+      <intent-filter>
+        <action android:name="com.google.android.gms.wearable.BIND_LISTENER"/>
+      </intent-filter>
+    </service>
+
+    <meta-data android:name="com.google.android.gms.version"
+        android:value="@integer/google_play_services_version"/>
+
   </application>
 
 </manifest>
