--- a/wear-sample/build.gradle
+++ b/wear-sample/build.gradle
@@ -6,8 +6,8 @@ dependencies {
   // compile('io.segment.analytics.android:all:1.3.11-SNAPSHOT@aar') {
   //   transitive = true
   // }
-  compile project(':core')
-  compile project(':wear') // only for Android Wear apps
+  compile project(':wear')
+  compile rootProject.ext.libraries.supportWearable
 }
 
 android {
@@ -15,7 +15,7 @@ android {
   buildToolsVersion rootProject.ext.buildToolsVersion
 
   defaultConfig {
-    minSdkVersion rootProject.ext.minSdkVersion
+    minSdkVersion rootProject.ext.minSdkVersionWear
     targetSdkVersion rootProject.ext.targetSdkVersion
     versionCode rootProject.ext.versionCode
     versionName rootProject.ext.versionName
