--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -1,13 +1,9 @@
 apply plugin: 'android-sdk-manager'
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 dependencies {
-  // repositories { maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' } }
-  // compile('io.segment.analytics.android:all:1.3.11-SNAPSHOT@aar') {
-  //   transitive = true
-  // }
   compile project(':core')
-  compile project(':wear') // only for Android Wear apps
+  compile rootProject.ext.libraries.playWearable
 }
 
 android {
@@ -29,13 +25,11 @@ android {
     preDexLibraries = rootProject.ext.preDexLibraries
   }
 
-  buildTypes {
-    release {
-      runProguard false
-      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
-    }
+  packagingOptions {
+    exclude 'LICENSE.txt'
   }
 }
 
-apply from: rootProject.file('gradle/checkstyle-app.gradle')
+apply from: rootProject.file('gradle/checkstyle-library.gradle')
+apply from: rootProject.file('gradle/attach-lean-jar.gradle')
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
