Flush more eagerly.
Instead of queing the flush operation, we perform it immediately when
the queue hits the max size.

Also:
- removes logger from QueueFile
- excludes QueueFile from checkstyle
- improves logging messages for flushing

--- a/gradle/checkstyle-library.gradle
+++ b/gradle/checkstyle-library.gradle
@@ -15,5 +15,6 @@ android.libraryVariants.all { variant ->
   checkstyle.exclude('**/BuildConfig.java')
   checkstyle.exclude('**/ProjectSettings.java') // todo: quick hack, can't disable in comments
   checkstyle.exclude('**/R.java')
+  checkstyle.exclude('**/QueueFile.java')
   project.tasks.getByName("check").dependsOn checkstyle
 }
